src/test/resources/model_test/valid/TwoEntitiesModel/Country.entity
Country {
	id : int {@Id @SizeMax(5)};
	name : string;
	
	employees : Employee[] ;
}
