src/test/resources/model_test/invalid/TwoEntities_model/Country.entity
CountryXxx {
	id : int {@Id, @SizeMax(5)};
	name : string;
}
